--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,13 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Desafio-Node-Fullstack</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color: #191e28"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
