add-locations page and edit backgound display

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,7 +7,7 @@
     <title>Desafio-Node-Fullstack</title>
   </head>
   <body>
-    <div id="root" style="background-color: #191e28"></div>
+    <div id="root" style="background-color: #191e28" class="container"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
